שים לב ששיניתי טיפה את MtmMat, שמתי הערת Roi ליד כדי שתוכל לחפש אותו.
  בניתי את 2 המחלקות שלי כמאט עד הסוף (אני מחכה לתשובות על כמה שאלות שהגשתי במודל לפני שאסיים)

   אבל נראה לי שמחלקת MtmMat תהיה כבדה מאוד (כי היא עושה את עיקר העבודה עבור כל המטריצות) אז כדאי שנעבוד עליו ביחד.

Signed-off-by: aa bb <a.block@campus.technion.ac.il>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,12 @@ project(Matrices)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Matrices main.cpp)
+add_executable(Matrices
+        Auxilaries.h
+        Complex.h
+        MtmExceptions.h
+        MtmMat.h
+        MtmMatSq.h
+        MtmMatTriag.h
+        MtmVec.h
+        main.cpp)
