-Completed all fixes -Passes all tests so far except for illegal multiplication (commented out here and marked with //FIXME, but needs to be added in when I get an answer from the guy in charge) -hasn't been tested yet with test3, I'll send it via WhatsApp
Signed-off-by: aa bb <a.block@campus.technion.ac.il>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.13)
 project(Matrices)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -Wall -Werror -pedantic-errors -DNDEBUG")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -Wall -Werror -pedantic-errors")
 
 add_executable(Matrices
         Auxilaries.h
